add others rpad map

--- a/roteiro01/src/padroesroteiro/bin/.gitignore
+++ b/roteiro01/src/padroesroteiro/bin/.gitignore
@@ -1,4 +1,10 @@
+/Roteiro 03.pdf
+/roteiro1/
 /roteiro2/
 /roteiro3/
-/roteiro03/
 /roteiro4/
+/roteiro5/
+/uml/
+/roteiro06/
+/roteiro6/
+/roteiro7/
